--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,4 +1,14 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] skips <b>Avenue I</b>, <b>Bay Pkwy</b>, <b>Avenue N</b> and <b>Avenue P</b></p>For service to these stations, take the [F] to Kings Hwy and transfer to a Manhattan-bound train.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Stillwell-bound [F] via the [E] line from <b>Jackson Hts-Roosevelt Av</b> to <strong>W 4 St.</strong></p><p style="min-height:10px"></p><p>Metropolitan Ave-bound [M] via [E] ‌line from ‌<b>5 Av/53 St</b> to <strong>W 4 St.</strong></p><p style="min-height:10px"></p>What's Happening?
+
+We're addressing a switch problem at 47-50 Sts-Rockefeller Ctr.
+
+Travel Alternatives:
+For 21 St-Queensbridge, take an [E][F][M][R] to nearby Queens Plaza.
+For Roosevelt Island, take the Roosevelt Island Tram or an [E][F][M] train to W 4 St for a northbound [F].
+For Lexington Av/63 St, take an [R] train to nearby Lexington Av/59 St.
+For 57 St, take an [E][F][M] to nearby 7 Av.
+
+[B][D][E][R] trains are running with delays in both directions.</div><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] skips <b>Avenue I</b>, <b>Bay Pkwy</b>, <b>Avenue N</b> and <b>Avenue P</b></p>For service to these stations, take the [F] to Kings Hwy and transfer to a Manhattan-bound train.
 
 For service from these stations, take the [F] to 18 Av and transfer to a Coney Island-bound train.
 
