--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,6 +1,8 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [E] trains via [F] line <b>W 4 St-Wash Sq</b> to <b>Jackson Hts-Roosevelt Av</b>.</p><p style="min-height:10px"></p><p>71 Av-bound [M] trains via ‌[F] line ‌<b>47-50 Sts-Rockefeller Ctr</b> to <b>36 St</b>.</p><p style="min-height:10px"></p>What's Happening?
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [E] trains via [F] line <b>W 4 St-Wash Sq</b> to <b>Jackson Hts-Roosevelt Av</b>.</p><p style="min-height:10px"></p><p>71 Av-bound [M] trains via ‌[F] line ‌<b>47-50 Sts-Rockefeller Ctr</b> to <b>36 St</b>.</p><p style="min-height:10px"></p>To ease congestion along 6 Av in Manhattan, the last stop on some 71 Av-bound [M] trains will be Chambers St on the [J].
 
-We're investigating why a train's brakes activated near Queens Plaza.
+What's Happening?
+
+We're working to move a train with a mechanical problem near Queens Plaza.
 
 Travel Alternatives:
 For service along 8 Av, take the [A][C].
@@ -8,6 +10,8 @@ For service to 7 Av, take the [B][D]
 For service to 5 Av/53 St and Lexington Av/53 St, take an [E][M][F] to nearby 57 St or Lexington Av/63 St.
 For Court Sq-23 St, take the [7].
 For Queens Plaza, take the [R].
+
+For service in Queens, take [F] or [R] trains.
 
 Northbound [F] trains are running with delays while they share the same track with rerouted trains.</div><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] skips <b>Avenue I</b>, <b>Bay Pkwy</b>, <b>Avenue N</b> and <b>Avenue P</b></p>For service to these stations, take the [F] to Kings Hwy and transfer to a Manhattan-bound train.
 
