--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,4 +1,13 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [E][F] trains are running on the local track from <b>Forest Hills-71 Av</b> to <b>Queens Plaza</b>/<strong>21 St</strong>. Expect delays in southbound [E][F][M][R] service.</p>We are investigating why a train's brakes activated near Jackson Hts-Roosevelt Av.</div><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] skips <b>Avenue I</b>, <b>Bay Pkwy</b>, <b>Avenue N</b> and <b>Avenue P</b></p>For service to these stations, take the [F] to Kings Hwy and transfer to a Manhattan-bound train.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[E][F][M][R] trains are running with delays in both directions. [E][F] trains are making local stops in both directions in <strong>Queens</strong>.</p>What's happening?
+We are investigating why a train's brakes activated near Jackson Hts-Roosevelt Av.
+
+Service Changes:
+Southbound [E][F] trains are making local stops from Forest Hills-71 Av to Queens Plaza/21 St-Queensbridge.
+Northbound [E][F] trains are making local stops from Queens Plaza/21 St-Queensbridge to Jackson Hts-Roosevelt Av.
+[M][R] trains are running with delays in both directions while rerouted trains share the local track.
+
+Travel Alternatives:
+As an alternative for service between Manhattan and Queens, consider taking [7][N] trains.</div><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] skips <b>Avenue I</b>, <b>Bay Pkwy</b>, <b>Avenue N</b> and <b>Avenue P</b></p>For service to these stations, take the [F] to Kings Hwy and transfer to a Manhattan-bound train.
 
 For service from these stations, take the [F] to 18 Av and transfer to a Coney Island-bound train.
 
